>>> BETA <<< _creation du controleur Mariage 	- ajout de la route

--- a/src/projetIHM/gestionMairieBundle/Resources/config/routing.yml
+++ b/src/projetIHM/gestionMairieBundle/Resources/config/routing.yml
@@ -22,3 +22,10 @@ gestion_mairie_modifierPersonne:
     defaults: { _controller: projetIHMgestionMairieBundle:Personne:modifierPersonne }
     requirements:
        id:  \d+
+
+
+
+gestion_mairie_ajouterMariage:
+    pattern:  /mairie/ajouterMariage
+    defaults: { _controller: projetIHMgestionMairieBundle:Mariage:ajouterMariage }
+
