>>> BETA <<< _Mariage         -creation des liste deroulantes pour select les personnes         -gerer la suppression         -correction faute Marie - Mairie 	-modif annee des dates dans form _Personne 	-modif annee des dates dans form _creation des route _creation affichage

--- a/src/projetIHM/gestionMairieBundle/Resources/config/routing.yml
+++ b/src/projetIHM/gestionMairieBundle/Resources/config/routing.yml
@@ -32,3 +32,15 @@ gestion_mairie_ajouterMariage:
     pattern:  /mairie/ajouterMariage
     defaults: { _controller: projetIHMgestionMairieBundle:Mariage:ajouterMariage }
 
+
+
+gestion_mairie_modifierMariage:
+    pattern:  /mairie/modifierMariage
+    defaults: { _controller: projetIHMgestionMairieBundle:Mariage:modifierMariage }
+
+
+
+gestion_mairie_supprimerMariage:
+    pattern:  /mairie/supprimerMariage
+    defaults: { _controller: projetIHMgestionMairieBundle:Mariage:supprimerMariage }
+
