>>> 1.0 <<< _Habite 	-suppression : done _Mariage 	-liaison des entité mariage et personne

--- a/src/projetIHM/gestionMairieBundle/Resources/config/routing.yml
+++ b/src/projetIHM/gestionMairieBundle/Resources/config/routing.yml
@@ -87,3 +87,8 @@ gestion_mairie_ajouterHabite:
     pattern:  /mairie/ajouterhabite
     defaults: { _controller: projetIHMgestionMairieBundle:Habite:ajouterHabite }
 
+gestion_mairie_supprimerHabite:
+    pattern:  /mairie/supprimerHabite/{id}
+    defaults: { _controller: projetIHMgestionMairieBundle:Habite:supprimerHabite }
+    requirements:
+       id:  \d+
