>>- 1.2 -<< _Gestion des langue 	-traduction dans translation en EN et FR

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,4 +1,6 @@
-projet_ih_mgestion_mairie:
+projetihm_gestion_mairie:
     resource: "@projetIHMgestionMairieBundle/Resources/config/routing.yml"
-    prefix:   /
+    prefix:   /{_locale}
+    requirements:
+        _locale: en|fr
 
