--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -17,15 +17,21 @@ security:
         dev:
             pattern:  ^/(_(profiler|wdt)|css|images|js)/
             security: false
-
+         
+        main_login:
+            pattern:   ^/login$
+            anonymous: true # On autorise alors les anonymes sur ce pare-feu
         main:
             pattern:   ^/
-            anonymous: true
+            anonymous: false
             provider:  in_memory
             form_login:
-                login_path: login
-                check_path: login_check
+                login_path: /login
+                check_path: /login_check
 
             logout:
-                path:   logout
+                path:   /logout
                 target: /fr/mairie
+
+    
+    
