--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -1,6 +1,6 @@
 security:
     encoders:
-        Symfony\Component\Security\Core\User\User: plaintext
+        projetIHM\UserBundle\Entity\User: sha512
 
     role_hierarchy:
         ROLE_ADMIN:       ROLE_USER
@@ -12,26 +12,24 @@ security:
                 users:
                     user:  { password: userpass, roles: [ 'ROLE_USER' ] }
                     admin: { password: adminpass, roles: [ 'ROLE_ADMIN' ] }
+        main:
+            id: fos_user.user_provider.username
 
     firewalls:
         dev:
             pattern:  ^/(_(profiler|wdt)|css|images|js)/
             security: false
          
-        main_login:
-            pattern:   ^/login$
-            anonymous: true # On autorise alors les anonymes sur ce pare-feu
         main:
-            pattern:   ^/
-            anonymous: false
-            provider:  in_memory
+            pattern: ^/
+            anonymous: true
+            provider: main
             form_login:
-                login_path: /login
-                check_path: /login_check
-
+                login_path: fos_user_security_login
+                check_path: fos_user_security_check
+             
             logout:
-                path:   /logout
+                path: fos_user_security_logout
                 target: /fr/mairie
-
-    
-    
+            remember_me:
+                 key: %secret%
