>>> 3.0 <<< _Ajout de la fonctionnalité du flux RSS sur personne

--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -19,7 +19,7 @@ security:
             security: false
          
         main_login:
-            pattern:   ^/login$
+            pattern:   ^/login$|xml
             anonymous: true # On autorise alors les anonymes sur ce pare-feu
         main:
             pattern:   ^/
