--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -1,35 +1,29 @@
 security:
     encoders:
-        projetIHM\UserBundle\Entity\User: sha512
+        FOS\UserBundle\Model\UserInterface: sha512
 
     role_hierarchy:
         ROLE_ADMIN:       ROLE_USER
-        ROLE_SUPER_ADMIN: [ROLE_USER, ROLE_ADMIN, ROLE_ALLOWED_TO_SWITCH]
+        ROLE_SUPER_ADMIN: ROLE_ADMIN
 
     providers:
-        in_memory:
-            memory:
-                users:
-                    user:  { password: userpass, roles: [ 'ROLE_USER' ] }
-                    admin: { password: adminpass, roles: [ 'ROLE_ADMIN' ] }
-        main:
+        fos_userbundle:
             id: fos_user.user_provider.username
 
     firewalls:
-        dev:
-            pattern:  ^/(_(profiler|wdt)|css|images|js)/
-            security: false
-         
         main:
             pattern: ^/
-            anonymous: true
-            provider: main
             form_login:
-                login_path: fos_user_security_login
-                check_path: fos_user_security_check
-             
+                provider: fos_userbundle
+                csrf_provider: form.csrf_provider
+                default_target_path: gestion_mairie_homepage
             logout:
-                path: fos_user_security_logout
-                target: /fr/mairie
-            remember_me:
-                 key: %secret%
+                path:   /logout
+                target: /login
+            anonymous:    true
+    access_control:
+        - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/register, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/admin/, role: ROLE_ADMIN }
+
