--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -12,18 +12,20 @@ security:
 
     firewalls:
        main:
-            pattern: ^/
+            pattern:  ^/
             form_login:
                 provider: fos_userbundle
                 csrf_provider: form.csrf_provider
                 default_target_path: gestion_mairie_homepage
+                
             logout:
                 path:   /logout
                 target: /login
-            anonymous:    true
+            anonymous: true
     access_control:
-        - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/login, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/register, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/admin/, role: ROLE_ADMIN }
+
 
