--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -1,22 +1,38 @@
 # app/config/security.yml
-security:
-    firewalls:
-        secured_area:
-            pattern:    ^/
-            anonymous: ~
-            http_basic:
-                realm: "Secured Demo Area"
 
-    access_control:
-        - { path: ^/admin, roles: ROLE_ADMIN }
+security:
+    encoders:
+        FOS\UserBundle\Model\UserInterface: sha512
+
+
+    role_hierarchy:
+        ROLE_ADMIN:       ROLE_USER
+        ROLE_SUPER_ADMIN: [ROLE_USER, ROLE_ADMIN, ROLE_ALLOWED_TO_SWITCH]
 
     providers:
-        in_memory:
-             memory:
-                users:
-                    ryan:  { password: ryanpass, roles: 'ROLE_USER' }
-                    admin: { password: kitten, roles: 'ROLE_ADMIN' }
+        fos_userbundle:
+            id: fos_user.user_provider.username
 
-    encoders:
-        Symfony\Component\Security\Core\User\User: plaintext
+    firewalls:
+        dev:
+            pattern:  ^/(_(profiler|wdt)|css|images|js)/
+            security: false
+        
+        
+        main_login:
+            pattern: ^/login$
+            anonymous: true
+        main:
+            pattern:   ^/
+            anonymous: false
+            provider:  fos_userbundle
+            form_login:
+                login_path: login
+                check_path: login_check
+            logout:
+                path:   logout
+                target: /mairie
 
+    access_control:
+        #- { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY, requires_channel: https }
+        #- { path: ^/_internal/secure, roles: IS_AUTHENTICATED_ANONYMOUSLY, ip: 127.0.0.1 }
